@@ -20,6 +20,15 @@ For more information on any of these issues, contact mercury@cs.mu.oz.au.
 
 <p>
 
+<h2> syntax </h2>
+
+<p>
+
+<ul>
+<li> Warn about the use of the deprecated old-style lambda expressions.
+
+</ul>
+
 <h2> type system </h2>
 
 <p>
@@ -339,6 +348,6 @@ For more information on any of these issues, contact mercury@cs.mu.oz.au.
 <hr>
 <!-------------------------->
 
-Last update was $Date: 1998-09-22 08:04:17 $ by $Author: dgj $@cs.mu.oz.au. <br>
+Last update was $Date: 1999-03-24 05:32:21 $ by $Author: fjh $@cs.mu.oz.au. <br>
 </body>
 </html>
